# RIOT-GAMES-API_v0.1

./: .gitignore  README.md  pyproject.toml
riotgames_demov0/: __init__.py  main.py
riotgames_demov0/config/: config.ini
riotgames_demov0/notebooks/: riotgames_notebook.ipynb
